grids fixed - ugly on mobile - fixed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
 }
 
 html{
-    border: solid var(--border-color);
+    /* border: solid var(--border-color); */
     margin: 2em;
     padding: 2em;
     font-size: 16px;
@@ -32,6 +32,11 @@ p{
     color: var(--link-color);
     text-decoration: none;
 }
+
+nav {
+    align-items: center;
+    justify-content: center;
+}
     
 button{
     border: solid 1px var(--border-color);
@@ -49,10 +54,10 @@ button{
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 2rem;
     max-width: 1200px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     padding: 1rem;
 }
 
@@ -69,6 +74,14 @@ button{
     height: auto;
     object-fit: cover;
     display: block;
+}
+
+.landscape img{
+    aspect-ratio: 16/9;
+}
+
+.pixelart img{
+    aspect-ratio: 1/1;
 }
 
 .grid-item:hover {
